buildscript {
    ext.kotlin_version = "1.4.31"
}

plugins {
    id "idea"
    id "java"
    id "org.jetbrains.kotlin.jvm" version "$kotlin_version"
    id "org.jetbrains.kotlin.kapt" version "$kotlin_version"
    id "com.adarshr.test-logger" version "2.0.0"
    id "org.jetbrains.dokka" version "0.10.1"
}

group 'com.totec'
version '0.1'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
    jcenter()
}

dependencies {

    implementation "org.jetbrains.kotlin:kotlin-stdlib"
    api "org.openjdk.jmh:jmh-core:1.21"
    api "commons-io:commons-io:2.8.0"

    kapt "org.openjdk.jmh:jmh-generator-annprocess:1.21"
    kaptTest "org.openjdk.jmh:jmh-generator-annprocess:1.21"
    kaptTest "com.dslplatform:dsl-json-java8:1.9.5"

    testApi "com.dslplatform:dsl-json-java8:1.9.5"
    testImplementation "org.openjdk.jmh:jmh-core:1.21"
    testImplementation "io.mockk:mockk:1.9.1"
    testImplementation "io.kotest:kotest-runner-junit5-jvm:4.2.0.RC1"
}

testlogger {
    theme 'standard'
    showExceptions true
    showStackTraces true
    showFullStackTraces true
    showCauses true
    slowThreshold 2000
    showSummary true
    showSimpleNames false
    showPassed true
    showSkipped true
    showFailed true
    showStandardStreams false
    showPassedStandardStreams true
    showSkippedStandardStreams true
    showFailedStandardStreams true
}

compileKotlin {
    kotlinOptions.jvmTarget = "1.8"
}

compileTestKotlin {
    kotlinOptions.jvmTarget = "1.8"
}

test {
    useJUnitPlatform()
    doFirst {
        jvmArgs += ['--add-exports', "java.base/jdk.internal.math=ALL-UNNAMED",]
    }
}

kapt {
    includeCompileClasspath = false
}

dokka {
    outputFormat = 'html'
    configuration {
        moduleName = "totec-live"
        perPackageOption {
            prefix = "com.totec.trading.live.benchmark"
            suppress = true
        }
    }
}